--- a/index.html
+++ b/index.html
@@ -2,6 +2,6 @@
 <p>我是蒲俊义，这是我的个人网站。 </p>
 <p>很高兴你来到这里</p>
 	<audio autoplay="autoplay" controls="controls"loop="loop" preload="auto"
-            	src="http://demo.mimvp.com/html5/take_you_fly.mp3">
+            	src="http://music.y444.cn/704999ec-c9a5-4189-9c29-11531ed2a7aa.mp3">
       		你的浏览器版本太低，不支持audio标签
 	</audio>
