--- a/index.html
+++ b/index.html
@@ -1,7 +1,83 @@
-<p>Hello 大家好</p>
-<p>我是蒲俊义，这是我的个人网站。 </p>
-<p>很高兴你来到这里</p>
-	<audio autoplay="autoplay" controls="controls"loop="loop" preload="auto"
-            	src="https://github.com/pujunyi-ai/pujunyi-ai.github.io/blob/master/GQ-Lola%20Coca.mp3">
-      		你的浏览器版本太低，不支持audio标签
-	</audio>
+//<p>Hello 大家好</p>
+//<p>我是蒲俊义，这是我的个人网站。 </p>
+//<p>很高兴你来到这里</p>
+//	<audio autoplay="autoplay" controls="controls"loop="loop" preload="auto"
+//            	src="https://github.com/pujunyi-ai/pujunyi-ai.github.io/blob/master/GQ-Lola%20Coca.mp3">
+//      		你的浏览器版本太低，不支持audio标签
+//	</audio>
+//
+<!DOCTYPE html>
+<html>
+<head>
+    <title>网站首页</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+        }
+        .header {
+            background-color: #333;
+            color: #fff;
+            padding: 20px;
+            text-align: center;
+        }
+        .container {
+            max-width: 1200px;
+            margin: 0 auto;
+            padding: 20px;
+        }
+        .welcome-message {
+            text-align: center;
+            margin-bottom: 20px;
+        }
+        .feature-list {
+            display: flex;
+            justify-content: space-evenly;
+            margin-bottom: 20px;
+        }
+        .feature {
+            flex: 1;
+            text-align: center;
+            margin: 0 10px;
+            padding: 20px;
+            background-color: #f1f1f1;
+            border-radius: 5px;
+        }
+        .footer {
+            background-color: #333;
+            color: #fff;
+            padding: 20px;
+            text-align: center;
+        }
+    </style>
+</head>
+<body>
+    <div class="header">
+        <h1>欢迎来到我的网站</h1>
+    </div>
+    <div class="container">
+        <div class="welcome-message">
+            <h2>欢迎访问网站首页</h2>
+            <p>这里是一个简单的静态网站首页示例</p >
+        </div>
+        <div class="feature-list">
+            <div class="feature">
+                <h3>功能1</h3>
+                <p>这里是功能1的描述</p >
+            </div>
+            <div class="feature">
+                <h3>功能2</h3>
+                <p>这里是功能2的描述</p >
+            </div>
+            <div class="feature">
+                <h3>功能3</h3>
+                <p>这里是功能3的描述</p >
+            </div>
+        </div>
+    </div>
+    <div class="footer">
+        <p>版权所有 &copy; 2024 我的网站</p >
+    </div>
+</body>
+</html>
